--- a/projeto_montando_o_lanche/index.html
+++ b/projeto_montando_o_lanche/index.html
@@ -30,7 +30,17 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    Imagens do Lanche
+                    <div class="row mt-2">
+                        <div class="col">
+                            <img src="imagens/padrao/pao_superior.png">
+                            <img src="imagens/padrao/alface.png">
+                            <img src="imagens/padrao/molho.png">
+                            <img src="imagens/padrao/molho.png">
+                            <img src="imagens/padrao/molho.png">
+                            <img src="imagens/padrao/hamburguer.png">
+                            <img src="imagens/padrao/pao_inferior.png">
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <!-- TIPO DO PÃO-->
