--- a/projeto_montando_o_lanche/index.html
+++ b/projeto_montando_o_lanche/index.html
@@ -49,12 +49,13 @@
                             <div class="card">
                                 <div class="card-header">TIPO DO PÃO</div>
                                 <div class="card-body">
+                                    <!--{{inputTipoPao}}-->
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
+                                        <input class="form-check-input" type="radio" value="gergelim" v-model="inputTipoPao">
                                         <label class="form-check-label">Gergelim</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio">
+                                        <input class="form-check-input" type="radio" value="australiano" v-model="inputTipoPao">
                                         <label class="form-check-label">Australiano</label>
                                     </div>
                                 </div>
@@ -131,9 +132,19 @@
     <script>
         const vm = new Vue({
             el: '#app',
+            data: {
+                inputTipoPao: ''
+            },
             computed: {
                 pao() {
-                    return ['imagens/padrao/pao_superior.png', 'imagens/padrao/pao_inferior.png']
+                    switch(this.inputTipoPao) {
+                        case 'gergelim':
+                            return ['imagens/pao_gergelim_superior.png', 'imagens/pao_gergelim_inferior.png']
+                        case 'australiano':
+                            return ['imagens/pao_australiano_superior.png', 'imagens/pao_australiano_inferior.png']
+                        default:
+                            return ['imagens/padrao/pao_superior.png', 'imagens/padrao/pao_inferior.png']
+                    }
                 },
                 alface () {
                     return 'imagens/padrao/alface.png'
