--- a/projeto_montando_o_lanche/index.html
+++ b/projeto_montando_o_lanche/index.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" v-if="etapa == 1">
                     <!-- TIPO DO PÃO-->
                     <div class="row mt-2">
                         <div class="col">
@@ -125,6 +125,41 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row mt-2">
+                        <div class="col d-flex justify-content-end">
+                            <button type="button" class="btn btn-primary" @click="fazerPedido()">Fazer Pedido</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-6" v-if="etapa == 2">
+                <div class="row mt-2">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-header">INFORME SEUS DADOS</div>
+                            <!--{{ inputNome }} - {{ inputEndereco }}-->
+                            <div class="card-body">
+                                <div class="mb-3">
+                                    <div class="form-label">Nome</div>
+                                    <input type="text" class="form-control" v-model="inputNome">
+                                </div>
+                                <div class="mb-3">
+                                    <div class="form-label">Endereço</div>
+                                    <input type="text" class="form-control" v-model="inputEndereco">
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col d-flex justify-content-between">
+                        <button type="button" class="btn btn-warning" @click="etapa -= 1">Voltar para o Lanche</button>
+                        <button type="button" class="btn btn-success">Confirmar</button>
+                    </div>
                 </div>
             </div>
 
@@ -139,7 +174,10 @@
                 inputTipoPao: '',
                 inputSaladas: [],
                 inputMolhos: [],
-                inputHamburguer: ''
+                inputHamburguer: '',
+                etapa: 1,
+                inputNome: '',
+                inputEndereco: ''
             },
             computed: {
                 pao() {
@@ -186,6 +224,16 @@
                             return ['imagens/soja.png']
                         default:
                             return ['imagens/padrao/hamburguer.png']
+                    }
+                }
+            },
+            methods: {
+                fazerPedido() {
+                    if(this.inputTipoPao && this.inputHamburguer) {
+                        this.etapa = 2;
+                        //console.log(this.etapa)
+                    } else {
+                        alert('Você precisa selecionar no mínimo um pão e um hambúrguer');
                     }
                 }
             }
